Lifecycle hooks cleanup

--- a/reaction-timer/package.json
+++ b/reaction-timer/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
+    "start": "pnpm serve",
     "build": "vue-cli-service build"
   },
   "dependencies": {
