--- a/web-form/package.json
+++ b/web-form/package.json
@@ -20,7 +20,8 @@
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "prettier": "^2.4.1"
+    "eslint-plugin-vue": "^8.7.1",
+    "prettier": "^2.4.1",
+    "vue-eslint-parser": "^10.2.0"
   }
 }
