--- a/ninja-jobs_router/package.json
+++ b/ninja-jobs_router/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
+    "build": "vue-cli-service build",
+    "watch:db": "json-server --watch data/db.json"
   },
   "dependencies": {
     "core-js": "^3.8.3",
